# otusCourseHW13

./: CMakeLists.txt  main.cpp  sortedElements.cpp  sortedElements.h  timsort.cpp  timsort.h
.github/workflows/: blank.yml
